.provarCaches/00D410000011HE0EAM/objects/DOX__Bulk_Job__c.object
<CustomObject>
    <description>Merge multiple documents at one time according to customer template</description>
    <fields>
        <fullName>DOX__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Attach_to_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a copy of the merged document is attached to the source record.</description>
        <inlineHelpText>Check this box if you would like to have a copy of the merged document attached to the source record.</inlineHelpText>
        <label>Attach to Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Chained_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chained Job</label>
        <referenceTo>DOX__Bulk_Job__c</referenceTo>
        <relationshipLabel>Bulk Job (Secondary Bulk Job)</relationshipLabel>
        <relationshipName>Chained_Bulk_Job</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Split_Count__c</fullName>
        <label>Document Split Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOX__Email_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DOX__Folder_Id__c</fullName>
        <label>Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Folder_Name__c</fullName>
        <description>Provide the DeveloperName of the folder you would like a copy of the merge document to be stored in. If this is a User&apos;s personal folder, then provide the Id of the user.</description>
        <inlineHelpText>Provide the DeveloperName of the folder you would like a copy of the merge document to be stored in. If this is a User&apos;s personal folder, then provide the Id of the user.</inlineHelpText>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Max_Count__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The maximum number of documents to merge into a single document when performing a bulk operation</description>
        <inlineHelpText>The maximum number of documents to merge into a single document</inlineHelpText>
        <label>Max Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOX__Merge_Flag__c</fullName>
        <description>The name of the checkbox field on the source document that indicates if this document requires a merge.</description>
        <inlineHelpText>The name of the checkbox field on the source document that indicates if this document requires a merge.</inlineHelpText>
        <label>Merge Flag</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Split_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOX__Template__c</fullName>
        <label>Merge Document</label>
        <referenceTo>DOX__Template__c</referenceTo>
        <relationshipLabel>Bulk Job</relationshipLabel>
        <relationshipName>Bulk_Print_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOX__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Name</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bulk Job</label>
    <listViews>
        <fullName>DOX__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MB-{0000000000}</displayFormat>
        <label>Bulk Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Job</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>